# 3DVis

./: .gitignore  CMakeLists.txt  README.md  cameraCalibration
dependencies/: Install_OpenCV.sh  install-opencv-apt.sh  install-opencv-macOS.sh  install-opencv-pacman.sh
src/: Contour.py  DFT1.cpp  Gaussian.cpp  NNTest.py  NNTest2.py  RGBtoIntensity.py  SplitAndMerge.cpp  aruco.cpp  calibrate.cpp  capture.cpp  colors.yaml  dft.cpp  learning.cpp  learning2.cpp  variables.yaml  watershed_test.py
src/basics/: PixelPerfect.cpp  capture.cpp
src/python/: RGBtoIntensity.py  watershed_test.py
